WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
179491
CachedResourceLoader::requestRawResource should not assert when destination is set in the context of a service worker
https://bugs.webkit.org/show_bug.cgi?id=179491
Summary
CachedResourceLoader::requestRawResource should not assert when destination i...
youenn fablet
Reported
2017-11-09 10:30:33 PST
CachedResourceLoader::requestRawResource should not assert when destination is set in the context of a service worker
Attachments
Patch
(2.00 KB, patch)
2017-11-09 10:32 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2017-11-09 10:32:22 PST
Created
attachment 326467
[details]
Patch
WebKit Commit Bot
Comment 2
2017-11-09 11:13:40 PST
Comment on
attachment 326467
[details]
Patch Clearing flags on attachment: 326467 Committed
r224639
: <
https://trac.webkit.org/changeset/224639
>
WebKit Commit Bot
Comment 3
2017-11-09 11:13:41 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2017-11-15 09:37:46 PST
<
rdar://problem/35562096
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug