CachedResourceLoader::requestRawResource should not assert when destination is set in the context of a service worker https://bugs.webkit.org/show_bug.cgi?id=179491

Patch by Youenn Fablet <youenn@apple.com> on 2017-11-09
Reviewed by Chris Dumez.

No change of behavior.
requestRawResource on web page should have the destination set as the empty string as per fetch spec.
In the context of a service worker, requestRawResource may be used with any destination.
Updating assertion accordingly.

* loader/cache/CachedResourceLoader.cpp:
(WebCore::CachedResourceLoader::requestRawResource):

Canonical link: https://commits.webkit.org/195537@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224639 268f45cc-cd09-0410-ab3c-d52691b4dbfc